# FreeStat

./: README.md  pyproject.toml
src/freelancer_app/: cli_async.py  freelancer.sqlite
src/freelancer_core/: ai.py  db.py  earning_service.py  llm_question_interface.py  llm_question_service.py  llm_service.py
src/freelancer_core/services/: freelance_stat_interface.py  freelance_stat_service.py
src/freelancer_core/services/ai/llm/: llm_interface.py  llm_service.py
src/freelancer_core/services/ai/questions/: llm_question_service.py
src/freelancer_core/services/loader/: data_loader_interface.py  data_loader_service.py
src/freelancer_core/services/table/: table_interface.py  table_service.py
src/freelancer_stat/: main.py
tests/services/: test_freelance_stat_service.py
tests/services/ai/: test_llm_service.py
