[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "freelancer-stat"
version = "0.1.0"
description = "CLI analyzer of freelancer earnings using GPT and PostgreSQL"
authors = ["Author name <you@example.com>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "freelancer_core"
from = "src"

[[tool.poetry.packages]]
include = "freelancer_app"
from = "src"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
openai = "^1.14.3"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.29"
punq = "^0.7.0"
aiosqlite = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
